// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo /> renders correctly 1`] = `
<h1
  className="Shorty-Logo"
>
  <a
    href="/"
    title="Lorem ipsum Logo"
  >
    Lorem ipsum
  </a>
</h1>
`;

exports[`<Logo className="foo-bar" /> renders correctly 1`] = `
<h1
  className="Shorty-Logo foo-bar"
>
  <a
    href="/"
    title="Lorem ipsum Logo"
  >
    Lorem ipsum
  </a>
</h1>
`;

exports[`<Logo title="foo-bar" disabled /> renders correctly 1`] = `
<h1
  className="Shorty-Logo"
  disabled={true}
  title="foo-bar"
>
  <a
    href="/"
    title="Lorem ipsum Logo"
  >
    Lorem ipsum
  </a>
</h1>
`;
